Updates installing.md
Auto commit by GitBook Editor